// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> Snapshots when default should render correctly 1`] = `
<div
  className="css-x1lx2d-StyledTag e1g5oa304"
>
  <button
    className="css-1i9l0g2-BaseTagButton-StyledTagLabel-setTagLabelSize e1g5oa302"
    onClick={[Function]}
    size="normal"
    type="button"
  >
    Tag
  </button>
</div>
`;

exports[`<Tag /> Snapshots when dismissible should render correctly 1`] = `
<div
  className="css-x1lx2d-StyledTag e1g5oa304"
>
  <button
    className="css-a55uof-BaseTagButton-StyledTagLabel-StyledTagLabel-setTagLabelSize e1g5oa302"
    onClick={[Function]}
    size="normal"
    type="button"
  >
    Tag
  </button>
  <button
    className="css-1vo5450-BaseTagButton-StyledTagRemove e1g5oa301"
    data-testid="tag-remove-button"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="e1g5oa300 cr-icon css-45d4g2-StyledIcon-StyledIconClose er8b7wo0"
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="cr-icon__base cr-icon__base-1"
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm1.478 8l2.216-2.216a1.045 1.045 0 1 0-1.478-1.478L8 6.522 5.784 4.306a1.045 1.045 0 0 0-1.478 1.478L6.522 8l-2.216 2.216a1.045 1.045 0 1 0 1.478 1.478L8 9.478l2.216 2.216a1.045 1.045 0 1 0 1.478-1.478L9.478 8z"
        fill="rgba(12,13,13,0.4)"
      />
      <path
        className="cr-icon__details cr-icon__details-1"
        d="M9.478 8l2.216-2.216a1.045 1.045 0 1 0-1.478-1.478L8 6.522 5.784 4.306a1.045 1.045 0 0 0-1.478 1.478L6.522 8l-2.216 2.216a1.045 1.045 0 1 0 1.478 1.478L8 9.478l2.216 2.216a1.045 1.045 0 1 0 1.478-1.478L9.478 8z"
        fill="#fff"
      />
    </svg>
  </button>
</div>
`;

exports[`<Tag /> Snapshots when small should render correctly 1`] = `
<div
  className="css-x1lx2d-StyledTag e1g5oa304"
>
  <button
    className="css-opnqaf-BaseTagButton-StyledTagLabel-StyledTagLabel-setTagLabelSize e1g5oa302"
    onClick={[Function]}
    size="small"
    type="button"
  >
    Tag
  </button>
  <button
    className="css-1vo5450-BaseTagButton-StyledTagRemove e1g5oa301"
    data-testid="tag-remove-button"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="e1g5oa300 cr-icon css-45d4g2-StyledIcon-StyledIconClose er8b7wo0"
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="cr-icon__base cr-icon__base-1"
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm1.478 8l2.216-2.216a1.045 1.045 0 1 0-1.478-1.478L8 6.522 5.784 4.306a1.045 1.045 0 0 0-1.478 1.478L6.522 8l-2.216 2.216a1.045 1.045 0 1 0 1.478 1.478L8 9.478l2.216 2.216a1.045 1.045 0 1 0 1.478-1.478L9.478 8z"
        fill="rgba(12,13,13,0.4)"
      />
      <path
        className="cr-icon__details cr-icon__details-1"
        d="M9.478 8l2.216-2.216a1.045 1.045 0 1 0-1.478-1.478L8 6.522 5.784 4.306a1.045 1.045 0 0 0-1.478 1.478L6.522 8l-2.216 2.216a1.045 1.045 0 1 0 1.478 1.478L8 9.478l2.216 2.216a1.045 1.045 0 1 0 1.478-1.478L9.478 8z"
        fill="#fff"
      />
    </svg>
  </button>
</div>
`;
